Bug 103903. Accessibility module must be ready for pres shell to disappear at any time, so it doesn't crash. r=jgaunt, sr=brendan